[package]
name = "slack-random-bot"
version = "0.1.0"
authors = ["Anh Mai <theanht1k20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
listenfd = "0.3"
rand = "0.7.0"
serde = "1.0.98"
failure = "0.1.5"
